--- a/static/css/style.css
+++ b/static/css/style.css
@@ -371,6 +371,7 @@ body {
     font-family: "JetBrains Mono", monospace;
     font-size: 13px;
     overflow-y: auto;
+    margin-bottom: 1vw;
 }
 
 /* ================= Buttons ================= */
